adding mapper and swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/coches_curso
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+server.servlet.context-path=/api
 #spring.jpa.hibernate.ddl-auto=update
 
+#springdoc.api-docs.enabled=true
+#springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
